Modifying logic for FacilityCatchmentConsumer